fixed top-nav on mobile view

--- a/src/assets/scss/custom/_navigation.scss
+++ b/src/assets/scss/custom/_navigation.scss
@@ -120,6 +120,7 @@
     left: 0px;
     margin-left: 0;
     min-width: 40em;
+    top: 98px;
     } 
 } 
 
